added some features
